# play-with-torch

./: .gitignore  404.html  README.md  config.json  index.html  inference.py  mkdocs.yml  parse_confi.py  play-with-torch.odt  requirements.txt  sitemap.xml  trace_model.py  train.py
base/: base_trainer.py
config/: nanodet_custom_xml_dataset.yml
config_file_detail/: index.html
data/: data.txt
docker/: Dockerfile  requirements.txt
docs/: .~lock.play-with-torch.odt#  DetectorPi.odt  DetectorPi.tex  index.md  play-with-torch.odt  play-with-torch.tex
examples/: test_cv_flask.py  test_torch.py
examples/templates/: index.html
model/: model.py
models/backbone/: repvgg.py
models/head/: gfl_head.py  nanodet_head.py
models/head/assigner/: assign_result.py
models/module/: transformer.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
templates/: index.html
test/: test_torch.py
test/library-test/: CMakeLists.txt  test_libtorch.cpp
tests/test_configs/: test_config.py
tests/test_data/: test_collate.py
tests/test_data/test_dataset/: test_cocodataset.py  test_xmldataset.py
tests/test_data/test_transform/: test_color.py  test_warp.py
tests/test_evaluator/: test_coco_detection.py
tests/test_models/test_backbone/: test_custom_csp.py  test_efficient_lite.py  test_ghostnet.py  test_mobilenetv2.py  test_repvgg.py  test_resnet.py  test_shufflenetv2.py
tests/test_trainer/: test_lightning_task.py  test_trainer.py
tests/test_utils/: test_flops.py
utils/: util.py
utils/trainer/: dist_trainer.py  task.py  trainer.py
(+15 files in other folders)
